--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,36 +1,23 @@
-section {
+.dash-board{
     height: calc(100vh - 122px);
-    display: flex;
 }
 
-.side-bar{
-    position: absolute;
-    /* transform: translateX(-100%); */
-    /* transition: .3s ease-in; */
-    background-color: red;
+.second-one{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
-
-.hidden-side-bar{
-    /* transform: translateX(0%); */
-    transition: .3s ease-in;
-    background-color: red;
-}
-
-/* .right-home{
-    width: 100%;
-} */
-
-/* .hide-right-home{
-    min-width: 100%;
-} */
-
-@media(max-width:700px){
-    .side-bar{
-        position: absolute;
-        transform: translateX(0%);
+@media(max-width:900px){
+    .first-one,.second-one{
+        width: 95%;
     }
-    .hidden-side-bar{
-        transform: translateX(0%);
-        transition: .3s ease-in;
+}
+
+@media(max-width:720px){
+    .dash-board{
+        height: 100%;
+    }
+   .second-one{
+        width: 95%;
+        grid-template-columns: 1fr 1fr;
     }
 }
