--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<app-navbar></app-navbar>
-<app-second-nav [Route]="currentRoute" (booleanValue)="booleanEvent($event)"></app-second-nav>
-<section class="flex-grow w-full flex h-full relative">
-  <div class="side-bar min-w-[300px] top-0 right-0 bg-[#fbf7fa] border-r-[1px] border-[#c9c7c7]" ></div>
-  <div class=" border-2 border-red-500" ></div>
-</section>
+<div class="dash-board h-full flex flex-col items-center justify-evenly">
+    <div class="first-one w-[90%] h-[47%] bg-[red] rounded-lg">ds</div>
+    <div class="second-one w-[90%] h-[47%] rounded-lg gap-3">
+        <div class="bg-[yellow] rounded-lg">sdg</div>
+        <div class="bg-[pink] rounded-lg">dgs</div>
+        <div class="bg-[violet] rounded-lg">dgs</div>
+    </div>
+</div>
 
 
-<!-- [ngClass]="!hiddenValue ? 'side-bar' : 'hidden-side-bar'" -->
-<!-- [ngClass]="!hiddenValue ? 'hide-right-home' : 'right-home'" -->
