--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="dash-board h-full flex flex-col items-center justify-evenly">
-    <div class="first-one w-[90%] h-[47%] bg-[red] rounded-lg">ds</div>
+    <div class="first-one !w-[90%] h-[47%] flex justify-center rounded-lg border-[1px]">
+        <app-line-chart class="w-full"></app-line-chart>
+    </div>
     <div class="second-one w-[90%] h-[47%] rounded-lg gap-3">
         <div class="bg-[yellow] rounded-lg">sdg</div>
         <div class="bg-[pink] rounded-lg">dgs</div>
