--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <app-second-nav (booleanValue)="booleanEvent($event)"></app-second-nav>
 <section class=" w-full  relative">
     <app-side-bar></app-side-bar>
-    <div class="main border-2 border-red-500 w-full " >
+    <div class="main  w-full " >
         <router-outlet></router-outlet>
     </div>
 </section>
