doughnut chart added

--- a/src/app/components/shared/line-chart/line-chart.component.css
+++ b/src/app/components/shared/line-chart/line-chart.component.css
@@ -1,5 +1,12 @@
 .bg-green-600 {
     width: 100% !important;
     height: 100%;
+}
+
+
+@media(max-width:450px){
+    #myChart{
+        padding: 0;
+    }
 
 }
