--- a/src/app/components/shared/side-bar/side-bar.component.html
+++ b/src/app/components/shared/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="side-bar min-w-[300px] top-0 left-0 bg-[#fbf7fa] border-r-[1px] border-[#c9c7c7] h- h-full flex flex-col " [ngClass]="!hiddenValue ? 'side-bar' : 'hidden-side-bar'">
+<div class="side-bar min-w-[300px] top-0 left-0 bg-[#fbf7fa] border-r-[1px] border-[#c9c7c7] h-full flex flex-col " [ngClass]="!hiddenValue ? 'side-bar' : 'hidden-side-bar'">
     <app-button [buttonStyles]="buttonStyles" (click)="goToDashboard()">Dashboard</app-button>
     <app-button [buttonStyles]="buttonStyles" (click)="goToDevices()">Device</app-button>
 </div>
