--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dash-board flex flex-col items-center justify-evenly ">
+<div class="dash-board flex flex-col items-center justify-evenly mb-5">
     <div class="first-one !w-[90%] h-[50%] flex justify-center rounded-lg border-[1px] mt-3">
         <app-line-chart class="chart w-full h-full" [dataOne]="dataOne" [dataTwo]="dataTwo" [totalData]="totalData"></app-line-chart>
     </div>
