--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,11 +1,17 @@
-<nav class="nav-bar  w-full h-[60px] flex justify-between px-[25px] sm:px-10 items-center border-b-[1px] border-[#c9c7c7]">
-    <div class="font-bold text-[25px] sm:text-[28px]">Panel0</div>
-    <div class="flex sm:gap-10 gap-5 h-full items-center">
-        <div class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center">
-            <i class="fa-solid fa-user text-[20px]"></i>
-        </div>
-        <div class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center">
-            <i class="fa-solid fa-right-from-bracket text-[20px]"></i>
-        </div>
+<nav
+  class="nav-bar w-full h-[60px] flex justify-between px-[25px] sm:px-10 items-center border-b-[1px] border-[#c9c7c7]"
+>
+  <div class="font-bold text-[25px] sm:text-[28px]">Panel0</div>
+  <div class="flex sm:gap-10 gap-5 h-full items-center">
+    <div
+      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
+    >
+      <i class="fa-solid fa-user text-[20px]"></i>
     </div>
+    <div
+      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
+    >
+      <i class="fa-solid fa-right-from-bracket text-[20px]" (click)="gotoEstroWebpage()"></i>
+    </div>
+  </div>
 </nav>
