--- a/src/app/components/shared/button/button.component.html
+++ b/src/app/components/shared/button/button.component.html
@@ -1,1 +1,3 @@
-<button mat-raised-button [ngStyle]="buttonStyles"><ng-content></ng-content></button>
+<button mat-button [ngStyle]="buttonStyles"  >
+  <ng-content></ng-content>
+</button>
