--- a/src/app/components/shared/data-percent/data-percent.component.html
+++ b/src/app/components/shared/data-percent/data-percent.component.html
@@ -1,11 +1,15 @@
-<div class=" border-[1px] rounded-lg  py-4 ">
-    <div class=" flex flex-col justify-center items-center">
-        <div class="flex w-[90%]">
-            <div class="w-[20px] h-[20px] " [style.backgroundColor]="bground"></div> <h1 class="ml-2">{{dataName}}</h1>
-        </div>
-        <h1 class=" w-[90%] text-right">{{percentage}}%</h1>
-        <div class="w-[90%] h-[35px] rounded-[5px] bg-[#d9d9d9] overflow-hidden">
-            <div class=" h-full bg-[#6975ff]" [ngStyle]="{'width': percentage + '%' , 'background-color' : bground }"></div>  
-        </div>
+<div class="border-[1px] rounded-lg py-4">
+  <div class="flex flex-col justify-center items-center">
+    <div class="flex w-[90%]">
+      <div class="w-[20px] h-[20px]" [style.backgroundColor]="bground"></div>
+      <h1 class="ml-2">{{ dataName }}</h1>
     </div>
+    <h1 class="w-[90%] text-right">{{ percentage }}%</h1>
+    <div class="w-[90%] h-[35px] rounded-[5px] bg-[#d9d9d9] overflow-hidden">
+      <div
+        class="h-full bg-[#6975ff]"
+        [ngStyle]="{ width: percentage + '%', 'background-color': bground }"
+      ></div>
+    </div>
+  </div>
 </div>
