--- a/src/app/components/shared/input/input.component.html
+++ b/src/app/components/shared/input/input.component.html
@@ -1,4 +1,10 @@
-<mat-form-field class="input-field" >
-    <mat-label>{{label}}</mat-label>
-    <input matInput [placeholder]="placeholder" [type]="type" (input)="onInputChange($event)" #value>
+<mat-form-field class="input-field">
+  <mat-label>{{ label }}</mat-label>
+  <input
+    matInput
+    [placeholder]="placeholder"
+    [type]="type"
+    (input)="onInputChange($event)"
+    #value
+  />
 </mat-form-field>
