--- a/src/app/components/shared/line-chart/line-chart.component.html
+++ b/src/app/components/shared/line-chart/line-chart.component.html
@@ -1,3 +1,3 @@
-<div class="!w-full h-full flex justify-center items-center">
-    <canvas id="line" class="!w-full p-3"></canvas>
+<div class="chart-container !w-full h-full flex justify-center items-center">
+  <canvas class="chart-canvas" id="line" class="!w-full p-3"></canvas>
 </div>
