--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,18 @@
 <app-navbar></app-navbar>
 <app-second-nav (booleanValue)="booleanEvent($event)"></app-second-nav>
-<section class=" w-full  relative ">
-    <app-side-bar></app-side-bar>
-    <div class="main  w-full " >
-        <router-outlet></router-outlet>
+<section class="w-full">
+  <mat-drawer-container class="main-container" autosize>
+    <mat-drawer #drawer class="side-sidenav" mode="side" [opened]="sidebarOper">
+      <app-button [buttonStyles]="buttonStyles" (click)="goToDashboard()"
+        >Dashboard</app-button
+      >
+      <app-button [buttonStyles]="buttonStyles" (click)="goToDevices()"
+        >Device</app-button
+      >
+    </mat-drawer>
+
+    <div class="sidenav-content">
+      <router-outlet></router-outlet>
     </div>
+  </mat-drawer-container>
 </section>
