--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
         >Dashboard</app-button
       >
       <app-button [buttonStyles]="buttonStyles" (click)="goToDevices()"
-        >Device</app-button
+        >Devices</app-button
       >
     </mat-drawer>
 
