--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,7 +7,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
-  height: 100%;
+  height: 100% !important;
 }
 
 .side-sidenav {
@@ -21,12 +21,8 @@
 
 @media (max-width: 650px) {
   .side-sidenav {
-    width: 200px;
+    width: 60px;
   }
+
 }
 
-@media (max-width: 380px) {
-  .side-sidenav {
-    width: 100%;
-  }
-}
