ui completted debugging remains

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div
       class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
     >
-      <i class="fa-solid fa-user text-[20px]"></i>
+      <i class="fa-solid fa-user text-[20px]" (click)="gotoUserProfile()"></i>
     </div>
     <div
       class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
