--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
       <app-device-availabe></app-device-availabe>
     </div>
     <div
-      class="offline-device border rounded-lg px-2"
+      class="offline-device border rounded-lg "
     >
       <app-offline-device class="w-[90%]"></app-offline-device>
     </div>
