--- a/src/app/pages/single-pages/single-pages.component.html
+++ b/src/app/pages/single-pages/single-pages.component.html
@@ -1,18 +1,5 @@
 <div class=" flex flex-col items-center  gap-5">
-    <div class="single-data  w-[90%] py-3 gap-2 ">
-        <div class="border p-9  rounded-lg">
-            sjdgah
-        </div>
-        <div class="border p-9  rounded-lg">
-            sjdgah
-        </div>
-        <div class="border p-9  rounded-lg">
-            sjdgah
-        </div>
-        <div class="border p-9  rounded-lg">
-            sjdgah
-        </div>
-    </div>
+    <app-device-details class="w-[90%] " [data]="device"></app-device-details>
     <div
     class="first-one !w-[90%] !h-[400px] flex justify-center rounded-lg border-[1px] "
   >
@@ -44,8 +31,8 @@
       class="item3"
     ></app-data-percent>
   </div>
-  <div class="w-[90%] p-[55px] border-2 rounded-lg">
-    <h1>sdhgjhfk</h1>
+  <div class="w-[90%] py-10 border-2 rounded-lg">
+    <app-up-time-data></app-up-time-data>
   </div>
 </div>
 
