--- a/src/app/components/shared/up-time-data/up-time-data.component.html
+++ b/src/app/components/shared/up-time-data/up-time-data.component.html
@@ -1,11 +1,23 @@
-<div class="w-full flex flex-col items-center gap-2 ">
+<!-- <div class="w-full flex flex-col items-center gap-2 ">
     <div class="percent w-[97%] h-[55px] bg-[#d9d9d9] rounded-[5px] relative overflow-hidden">
         <div class="absolute h-full bg-[#3ae169] z-50" [style.width]="getOnlineWidth()+'%'"></div>
         <div class="absolute h-full bg-[#dd3030]" [style.width]="getOfflineWidth()+'%'"></div>
     </div>
     <div class="line w-[97%] h-[1px] bg-[#979596] flex justify-between items-center">
-        <div class="" *ngFor="let num of numbers ; let i= index">
+        <div class="rounded-full" *ngFor="let num of numbers ; let i= index">
              <h1 class="count mt-7 text-[13px]">{{i}}</h1>
         </div>
     </div>
-</div>
+</div> -->
+
+
+<div class="chartMenu">
+    <p>WWW.CHARTJS3.COM (Chart JS <span id="chartVersion"></span>)</p>
+  </div>
+  <div class="chartCard">
+    <div class="chartBox">
+      <canvas id="myChart"></canvas>
+    </div>
+  </div>
+
+
