--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -1,5 +1,5 @@
 <div
-  class="device-main  grid grid-cols-3 gap-3  pt-6 pl-12"
+  class="device-main  grid grid-cols-3 gap-3  pt-6 pl-12 cursor-pointer"
 >
 <app-device *ngFor="let dt of deviceData" [data]="dt"></app-device>
 </div>
