--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -4,12 +4,12 @@
   <div class="font-bold text-[25px] sm:text-[28px]">Panel0</div>
   <div class="flex sm:gap-10 gap-5 h-full items-center">
     <div
-      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
+      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center cursor-pointer"
     >
       <i class="fa-solid fa-user text-[20px]" (click)="gotoUserProfile()"></i>
     </div>
     <div
-      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center"
+      class="h-[45px] w-[45px] rounded-full bg-[#d9d9d9] grid place-items-center cursor-pointer"
     >
       <i class="fa-solid fa-right-from-bracket text-[20px]" (click)="gotoEstroWebpage()"></i>
     </div>
