--- a/src/app/components/shared/second-nav/second-nav.component.html
+++ b/src/app/components/shared/second-nav/second-nav.component.html
@@ -2,13 +2,13 @@
   class="second-nav w-full h-[60px] sm:px-10 px-[25px] flex items-center gap-3 border-b-[1px] border-[#c9c7c7]"
 >
   <i class="fa-solid fa-bars text-[25px]" (click)="handleClick()"></i>
-  <h1 class="route text-[25px] font-normal ml-[8px]" (click)="gotodevice()">
+  <h1 class="route text-[25px] font-normal ml-[8px] cursor-pointer" (click)="gotodevice()">
     {{ route?.[0] | capitalize}}
   </h1>
   <ng-container *ngIf="route && route?.length > 1">
         <ng-container *ngFor="let rt of route.slice(1)">
             <i class="right-arrow fa-solid fa-angle-right text-[25px]" ></i>
-            <h1 class="route text-[25px] font-normal ml-[8px]">{{ rt | capitalize }}</h1>
+            <h1 class="route text-[25px] font-normal ml-[8px] cursor-pointer">{{ rt | capitalize }}</h1>
         </ng-container>
     </ng-container>
 </nav>
