--- a/src/app/pages/single-pages/single-pages.component.html
+++ b/src/app/pages/single-pages/single-pages.component.html
@@ -31,8 +31,9 @@
       class="item3"
     ></app-data-percent>
   </div>
-  <div class="w-[90%] py-10 border-2 rounded-lg">
-    <app-up-time-data></app-up-time-data>
+  <div class="w-[90%] pt-4 border-2 rounded-lg">
+    <h1 class="  px-5">Uptime Data</h1>
+    <app-up-time-data [online]="onlineTime" [offline]="offlineTime"></app-up-time-data>
   </div>
 </div>
 
