completted second push

--- a/src/app/components/shared/up-time-data/up-time-data.component.html
+++ b/src/app/components/shared/up-time-data/up-time-data.component.html
@@ -1,6 +1,6 @@
 
 <div class=" w-[100%] flex justify-center">
-    <div class=" !w-[99%]">
+    <div class="!w-[100%] px-[10px]">
         <canvas id="bar" class=""></canvas>
     </div>
 </div>
